--- a/web.html
+++ b/web.html
@@ -8,9 +8,9 @@
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+  <div class="w3-half w3-blue w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1 style="color:  rgb(119, 128, 0);">Sunil Adhikari</h1>
+      <h1 style="color:  rgb(4, 128, 0);">Sunil Adhikari</h1>
     </div>
     <div class="w3-padding-64">
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">About Me</a>   
@@ -20,7 +20,7 @@
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+  <div class="w3-half w3-green w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
@@ -33,14 +33,14 @@
 
 <!-- Second Grid: Work & Resume -->
 <div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
+  <div class="w3-half w3-green w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>Achievements</h2>
       <p align="center">I have one year experience of teaching basic level in the reputed institution of the country. I have worked as beginner front end developer using html and css. I am also learning Python and Django in one of the reputed institution of capital city of Nepal.
       
       </p>
   </div></div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:800px">
+  <div class="w3-half w3-blue w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
       <h2>My Resume</h2>
       <div class="w3-container w3-responsive">
@@ -84,7 +84,7 @@
 
 <!-- Third Grid: Notes -->
 <div class="w3-row" id="Notes">
-  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
+  <div class="w3-half w3-blue w3-container w3-center" style="height:700px">
     <div>
       <h1>Notes</h1>
       <ul>
