--- a/table.html
+++ b/table.html
@@ -66,16 +66,48 @@
 <blockquote>
     <h1>Student Form:</h1>
     <form>
-        <label for="name">Name:</label><br>
+        <label for="name">Name:</label><br> 
+        <input type="text" id="name"><br><br>
+        <label for="name">Middle-Name:</label><br> 
+        <input type="text" id="name"><br><br>
+        <label for="name">Surname:</label><br> 
         <input type="text" id="name"><br><br>
         <label for="email">Email:</label><br>
         <input type="text" id="email"><br><br>
+        <label for="pin">PIN:</label><br>
+        <input type="text" id="pin" name="pin" size="4"><br><br>
         <label for="Contact">Contact:</label><br>
         <input type="text" id="contact"><br><br>
+        <label >Gender:</label><br>
+        <label><input type="radio" name="gender">Male</label>
+        <label><input type="radio" name="gender">Female</label><br><br>
+        <label >Course:</label><br>
+        <label><input type="checkbox">Python</label>
+        <label><input type="checkbox">Django</label>
+        <label><input type="checkbox">Html</label>
+        <label><input type="checkbox">CSS</label>
+        <label><input type="checkbox">Javascript</label><br><br>
+        <label for="country">Country</label><br>
+        <Select name="Country" id="country">
+        <option selected disabled>======Select Country====</option>
+        <option value="1">India</option>
+        <option value="2">USA</option>
+        <option value="3">UK</option>
+        <option value="4">Canada</option></Select><br><br>
+        <label for="dob">DOB</label>
+        <input type="date" id="dob"><br><br>
+        <label for="image">Choose file:</label><br>
+        <input type="file" id="image" multiple><br><br>
+        <label for="quantity">Quantity:</label>
+        <input type="number" id="quantity" name="quantity" min="0" max="100" step="10" value="30"><br><br>
+        <label for="gsearch">Search Google:</label>
+        <input type="search" id="gsearch" name="gsearch"><br><br>
+        <label for="phone">Enter your phone number:</label>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br><br>
         <label for="message">Message</label><br>
         <textarea id ="message" rows="10" cols="30"></textarea><br><br>
         <button>Send</button>
-
+        
       </form>
 </blockquote>
 <blockquote>
