--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <li>HTML -Frontend    </li>
             <li>CSS- Frontend</li>
             <li>Javascript-Frontend</li>
+            <li>ReactJs-Frontend</li>
             <li>Python- Backend</li>
             <li>Django- Backend</li>
       </ul>
