--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body class="w3-content" style="max-width:1300px">
+
+
+
+
+  <style>
+    .fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+  </style>
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
@@ -130,6 +145,9 @@
   </div>
 </div>
 <!-- Footer -->
+  <div>
+    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
+  </div>
 <footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
