--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   text-decoration: none;
   border-radius: 50%;
 }
+    .fa:hover {
+    opacity: 0.7;
+    }
   </style>
 
 <!-- First Grid: Logo & About -->
