--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     .fa:hover {
     opacity: 0.7;
     }
+    .fa-facebook {
+  background: #3B5998;
+  color: white;
+}
   </style>
 
 <!-- First Grid: Logo & About -->
