--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-  <style>
+<style>
     .fa {
   padding: 20px;
   font-size: 30px;
@@ -26,7 +26,26 @@
   background: #3B5998;
   color: white;
 }
-  </style>
+    .fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+</style>
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
@@ -154,6 +173,10 @@
 <!-- Footer -->
   <div>
     <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/adh_sunil" class="fa fa-twitter"></a>
+    <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/" class="fa fa-linkedin"></a>
+    <a href="https://www.youtube.com/@suniladhikari2815" class="fa fa-youtube"></a>
+    <a href="https://www.instagram.com/suniladhikari90" class="fa fa-instagram"></a>
   </div>
 <footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
