--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   padding: 20px;
   font-size: 30px;
   width: 70px;
-  text-align: right;
+/*   text-align: right; */
   text-decoration: none;
   border-radius: 50%;
 }
