--- a/index.html
+++ b/index.html
@@ -172,13 +172,11 @@
 </div>
 <!-- Footer -->
   <div>
-      <i class="fa fa-align-center">
-    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
+    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a><hr>
     <a href="https://twitter.com/adh_sunil" class="fa fa-twitter"></a>
     <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/" class="fa fa-linkedin"></a>
     <a href="https://www.youtube.com/@suniladhikari2815" class="fa fa-youtube"></a>
     <a href="https://www.instagram.com/suniladhikari90" class="fa fa-instagram"></a>
-    </i>
   </div>
 <footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
