--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </div>
 <!-- Footer -->
   <div>
-    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a><br>
+    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
     <a href="https://twitter.com/adh_sunil" class="fa fa-twitter"></a>
     <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/" class="fa fa-linkedin"></a>
     <a href="https://www.youtube.com/@suniladhikari2815" class="fa fa-youtube"></a>
