--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 <body class="w3-content" style="max-width:1300px">
 
 <style>
@@ -28,43 +27,6 @@
   color: white;
 }
 </style>
-
-<!-- <style>
-    .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 70px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-}
-    .fa:hover {
-    opacity: 0.7;
-    }
-    .fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-    .fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
-
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-
-</style> -->
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
@@ -192,11 +154,11 @@
 
 <footer class="footer">
   <div class="container text-center">
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-google-plus"></i></a>
-    <a href="#"><i class="fa fa-skype"></i></a>
+    <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
+    <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa- youtube"></i></a>
+    <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa- instagram"></i></a>
   </div>
 </footer>
 
