--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   </div>
   <div class="w3-half w3-green w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
-      <h1>About Me</h1>
+      <h2>About Me</h2>
       <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
-      <div class="w3-left-align w3-padding-large">
+      <div class="w3-center-align w3-padding-large">
         <p align=""center>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years.I am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
       </div>
     </div>
@@ -56,12 +56,16 @@
 <!-- Second Grid: Work & Resume -->
 <div class="w3-row">
   <div class="w3-half w3-green w3-center" style="min-height:800px" id="work">
-    <div class="w3-padding-64">
+    <div class="w3-center-align w3-padding-large">
       <h2>Achievements</h2>
+      <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <div class="w3-center-align w3-padding-large">
       <p align="center">I have one year experience of teaching basic level in the reputed institution of the country. I have worked as beginner front end developer using html and css. I am also learning Python and Django in one of the reputed institution of capital city of Nepal.
-      
       </p>
-  </div></div>
+         </div>
+      </div>
+    </div>
+  </div>
   <div class="w3-half w3-blue w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
       <h2>My Resume</h2>
