--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     </div>
   </div>
 </div>
+<div class="w3-row" id="My Resume">
   <div class="w3-half w3-blue w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
       <h2>My Resume</h2>
