--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- Second Grid: Work & Resume -->
 <div class="w3-row">
-  <div class="w3-half w3-green w3-center" style="min-height:800px" id="work">
+  <div class="w3-half w3-blue w3-center" style="min-height:800px" id="work">
     <div class="w3-center-align w3-padding-large">
       <h2>Achievements</h2>
       <p align="center">I have one year experience of teaching basic level in the reputed institution of the country. I have worked as beginner front end developer using html and css. I am also learning Python and Django in one of the reputed institution of capital city of Nepal.
@@ -64,7 +64,7 @@
   </div>
 </div>
 <div class="w3-row">
-  <div class="w3-half w3-blue w3-container" style="min-height:800px">
+  <div class="w3-half w3-green w3-container">
     <div class="w3-padding-64 w3-center">
       <h2>My Resume</h2>
       <div class="w3-container w3-responsive">
