--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
     </div>
   </div>
 </div>
-<div class="w3-row">
-  <div class="w3-half w3-green w3-container">
+  <div class="w3-half w3-green w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h2>My Resume</h2>
       <div class="w3-container w3-responsive">
@@ -104,7 +103,6 @@
       </div>
     </div>
   </div>
-</div>
 
 <!-- Third Grid: Notes -->
 <div class="w3-row" id="Notes">
