--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+<style>
+  .footer {
+    background: #061D25;
+    padding: 10px 0;
+  }
+  .footer a {
+    color: #70726F;
+    font-size: 20px;
+    padding: 10px;
+    border-right: 1px solid #70726F;
+    transition: all .5s ease;
+  }
+  .footer a:first-child {
+    border-left: 1px solid #70726F;
+  }
+  .footer a:hover {
+    color: white;
+  }
+  </style>
+
 <body class="w3-content" style="max-width:1300px">
 
-<style>
-.footer {
-  background: #061D25;
-  padding: 10px 0;
-}
-.footer a {
-  color: #70726F;
-  font-size: 20px;
-  padding: 10px;
-  border-right: 1px solid #70726F;
-  transition: all .5s ease;
-}
-.footer a:first-child {
-  border-left: 1px solid #70726F;
-}
-.footer a:hover {
-  color: white;
-}
-</style>
-
-   <!-- First Grid: Logo & About -->
+  <!-- First Grid: Logo & About -->
   <div class="w3-row">
-    <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+    <div class="w3-half blue w3-container w3-center" style="height:700px">
       <div class="w3-padding-64">
         <h1 style="color:  rgb(119, 128, 0);">Sunil Adhikari</h1>
-         <img src="image2.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       </div>
       <div class="w3-padding-64">
         <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">About Me</a>
@@ -43,10 +42,10 @@
         <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
       </div>
     </div>
-    <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+    <div class="w3-half green w3-container" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
-        <img src="image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+        <img src="image.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
         <div class="w3-left-align w3-padding-large">
           <p>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
             concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years.I
@@ -58,7 +57,7 @@
 
   <!-- Second Grid: Work & Resume -->
   <div class="w3-row">
-    <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
+    <div class="w3-half w3-green w3-center" style="min-height:800px" id="work">
       <div class="w3-left-align w3-padding-64">
         <h1>Achievements</h1>
         <p>I have one year experience of teaching basic level in the reputed institution of the country.
@@ -68,7 +67,7 @@
         </p>
       </div>
     </div>
-    <div class="w3-half w3-indigo w3-container" style="min-height:800px">
+    <div class="w3-half w3-blue w3-container" style="min-height:800px">
       <div class="w3-padding-64 w3-center">
         <h2>My Resume</h2>
         <div class="w3-container w3-responsive">
@@ -112,7 +111,7 @@
 
   <!-- Third Grid: Notes -->
   <div class="w3-row" id="Notes">
-    <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
+    <div class="w3-half w3-blue w3-container w3-center" style="height:700px">
       <div>
         <h1>Notes</h1>
         <ul>
@@ -129,13 +128,13 @@
           <li>HTML -Frontend </li>
           <li>CSS- Frontend</li>
           <li>Javascript-Frontend</li>
-          <li>React-Frontend</li>
+          <li>ReactJs-Frontend</li>
           <li>Python- Backend</li>
           <li>Django- Backend</li>
         </ul>
       </div>
     </div>
-    <div class="w3-half w3-teal w3-container" style="height:700px">
+    <div class="w3-half w3-green w3-container" style="height:700px">
       <div class="w3-padding-64 w3-padding-large">
         <h1>Contact</h1>
         <p class="w3-opacity"></p>
@@ -157,25 +156,25 @@
       </div>
     </div>
   </div>
-<footer class="footer">
-  <div class="container text-center">
-    <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
-    <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
+  <footer class="footer">
+    <div class="container text-center">
+      <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
+      <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
+      <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa-youtube"></i></a>
+      <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
+    </div>
+  </footer>
+  
+  <!-- Footer -->
+  <div class = "container">
+  <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/adh_sunil" class="fa fa-twitter"></a>
+  <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/" class="fa fa-linkedin"></a>
+  <a href="https://www.youtube.com/@suniladhikari2815" class="fa fa-youtube"></a>
+  <a href="https://www.instagram.com/suniladhikari90" class="fa fa-instagram"></a>
   </div>
-</footer>
-
-    
-<!-- Footer
-<!--   <div>
-    <a href="https://www.facebook.com/suniladhikari42" class="fa fa-facebook"></a>
-    <a href="https://twitter.com/adh_sunil" class="fa fa-twitter"></a>
-    <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/" class="fa fa-linkedin"></a>
-    <a href="https://www.youtube.com/@suniladhikari2815" class="fa fa-youtube"></a>
-    <a href="https://www.instagram.com/suniladhikari90" class="fa fa-instagram"></a>
-  </div> -->
 
 </body>
+
 </html>
