--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="w3-half green w3-container" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
-        <img src="image/image2.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+        <img src="Image/image2.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
         <div class="w3-left-align w3-padding-large">
           <p>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
             concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years.I
