--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <body class="w3-content" style="max-width:1300px">
 
   <!-- First Grid: Logo & About -->
+  <div>
   <div class="w3-row">
     <div class="w3-half blue w3-container w3-center" style="height:700px">
       <div class="w3-padding-64">
@@ -43,6 +44,7 @@
         <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
       </div>
     </div>
+  </div>
     <div class="w3-half green w3-container" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
