--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <!-- Second Grid: Work & Resume -->
   <div class="w3-row">
-    <div class="w3-half w3-green w3-center" style="min-height:800px" id="work">
+    <div class="w3-half w3-purple w3-center" style="min-height:800px" id="work">
       <div class="w3-left-align w3-padding-64">
         <h1>Achievements</h1>
         <p>I have one year experience of teaching basic level in the reputed institution of the country.
@@ -68,7 +68,7 @@
         </p>
       </div>
     </div>
-    <div class="w3-half w3-blue w3-container" style="min-height:800px">
+    <div class="w3-half w3-red w3-container" style="min-height:800px">
       <div class="w3-padding-64 w3-center">
         <h2>My Resume</h2>
         <div class="w3-container w3-responsive">
@@ -112,7 +112,7 @@
 
   <!-- Third Grid: Notes -->
   <div class="w3-row" id="Notes">
-    <div class="w3-half w3-blue w3-container w3-center" style="height:700px">
+    <div class="w3-half w3-orange w3-container w3-center" style="height:700px">
       <div>
         <h1>Notes</h1>
         <ul>
@@ -135,7 +135,7 @@
         </ul>
       </div>
     </div>
-    <div class="w3-half w3-green w3-container" style="height:700px">
+    <div class="w3-half w3-pink w3-container" style="height:700px">
       <div class="w3-padding-64 w3-padding-large">
         <h1>Contact</h1>
         <p class="w3-opacity"></p>
