--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- Second Grid: Work & Resume -->
   <div class="w3-row">
     <div class="w3-half w3-purple w3-center" style="min-height:800px" id="work">
-      <div class="w3-left-align w3-padding-64">
+      <div class="w3-left-align w3-padding-large">
         <h1>Achievements</h1>
         <p>I have one year experience of teaching basic level in the reputed institution of the country.
           I have worked as beginner front end developer using html and css. I am also learning Python and Django in one
