--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
       </div>
     </div>
-    <div class="w3-half w3-darkblue w3-container w3-center" style="height:700px">
+    <div class="w3-half w3-orange w3-container w3-center" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
         <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
