--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="w3-row">
     <div class="w3-half w3-pink w3-container w3-center" style="height:700px">
       <div class="w3-padding-64">
-        <h1 style="color:  rgb(119, 128, 0);">Sunil Adhikari</h1>
+        <h1 style="color: aquagreen;">Sunil Adhikari</h1>
         <img src="Image/image2.jpg" class="w3-margin w3-circle" alt="Person" style="width:20%">
       </div>
       <div class="w3-padding-64">
@@ -43,7 +43,7 @@
         <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
       </div>
     </div>
-    <div class="w3-half w3-lightgreen w3-container w3-center" style="height:700px">
+    <div class="w3-half w3-green w3-container w3-center" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
         <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
