--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Notes</a>
         <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
       </div>
+     </div>
     </div>
+  </div>
     <div class="w3-half w3-green w3-container w3-center" style="height:700px">
       <div class="w3-padding-64 w3-center">
         <h1>About Me</h1>
