--- a/index.html
+++ b/index.html
@@ -4,167 +4,172 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
 <style>
-  .footer {
-    background: #061D25;
-    padding: 10px 0;
-  }
-  .footer a {
-    color: #70726F;
-    font-size: 20px;
-    padding: 10px;
-    border-right: 1px solid #70726F;
-    transition: all .5s ease;
-  }
-  .footer a:first-child {
-    border-left: 1px solid #70726F;
-  }
-  .footer a:hover {
-    color: white;
-  }
-  </style>
+    .footer {
+        background: #061D25;
+        padding: 10px 0;
+    }
+
+    .footer a {
+        color: #70726F;
+        font-size: 20px;
+        padding: 10px;
+        border-right: 1px solid #70726F;
+        transition: all .5s ease;
+    }
+
+    .footer a:first-child {
+        border-left: 1px solid #70726F;
+    }
+
+    .footer a:hover {
+        color: white;
+    }
+</style>
 
 <body class="w3-content" style="max-width:1300px">
 
-  <!-- First Grid: Logo & About -->
-  <div class="w3-row">
-    <div class="w3-half w3-pink w3-container w3-center" style="height:700px">
-      <div class="w3-padding-64">
-        <h1 style="color: aquagreen;">Sunil Adhikari</h1>
-      <div class="w3-padding-64">
-        <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">About Me</a>
-        <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Achievements</a>
-        <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Education</a>
-        <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Notes</a>
-        <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
-      </div>
-     </div>
-    </div>
-  </div>
-    <div class="w3-half w3-green w3-container w3-center" style="height:700px">
-      <div class="w3-padding-64 w3-center">
-        <h1>About Me</h1>
-        <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
-        <div class="w3-left-align w3-padding-large">
-          <p>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge miner in the
-            concerned subject. I am keen and enthusiast to learn technology. I have been in the field since 10 years.I
-            am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
+    <!-- First Grid: Logo & About -->
+    <div class="w3-row">
+        <div class="w3-half w3-pink w3-container w3-center" style="height:700px">
+            <div class="w3-padding-64">
+                <h1 style="color: aquagreen;">Sunil Adhikari</h1>
+                <div class="w3-padding-64">
+                    <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">About Me</a>
+                    <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Achievements</a>
+                    <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Education</a>
+                    <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Notes</a>
+                    <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Second Grid: Work & Resume -->
-  <div class="w3-row">
-    <div class="w3-half w3-purple w3-center" style="min-height:800px" id="work">
-      <div class="w3-left-align w3-padding-large">
-        <h1>Achievements</h1>
-        <p>I have one year experience of teaching basic level in the reputed institution of the country.
-          I have worked as beginner front end developer using html and css. I am also learning Python and Django in one
-          of the reputed institution of capital city of Nepal.
-        </p>
-      </div>
-    </div>
-    <div class="w3-half w3-red w3-container" style="min-height:800px">
-      <div class="w3-padding-64 w3-center">
-        <h2>My Resume</h2>
-        <div class="w3-container w3-responsive">
-          <table class="w3-table">
-            <tr class="w3-white">
-              <th>Year</th>
-              <th>Qualification</th>
-              <th>Institution</th>
-            </tr>
-            <tr class="w3-white">
-              <td>2015-2019</td>
-              <td>BSC. CSIT</td>
-              <td>Nepalaya College, Kathmandu</td>
-            </tr>
-            <tr class="w3-white">
-              <td>2012-2015</td>
-              <td>Diploma in Networking</td>
-              <td>VIT, Melbourne</td>
-            </tr>
-            <tr class="w3-white">
-              <td>2009-2012</td>
-              <td>Diploma in Horticulture</td>
-              <td>HSA, Melbourne</td>
-            </tr>
-            <tr class="w3-white">
-              <td>2006-2008</td>
-              <td>12 in Biological science</td>
-              <td>CCRC, Kathmandu</td>
-            </tr>
-            <tr class="w3-white">
-              <td>2002-2005</td>
-              <td>High School</td>
-              <td>CESBS, Chitwan</td>
-            </tr>
-
-          </table>
+        <div class="w3-half w3-green w3-container w3-center" style="height:700px">
+            <div class="w3-padding-64 w3-center">
+                <h1>About Me</h1>
+                <img src="Image/image4.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
+                <div class="w3-left-align w3-padding-large">
+                    <p>I am a student of computer science who passed bachelor's degree in 2077. I am a deep knowledge
+                        miner in the
+                        concerned subject. I am keen and enthusiast to learn technology. I have been in the field since
+                        10 years.I
+                        am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <!-- Third Grid: Notes -->
-  <div class="w3-row" id="Notes">
-    <div class="w3-half w3-orange w3-container w3-center" style="height:700px">
-      <div>
-        <h1>Notes</h1>
-        <ol>
-          <li>Computer- Class 3</li>
-          <li>Computer- Class 4</li>
-          <li>Computer- Class 5</li>
-          <li>Computer- Class 6</li>
-          <li>Computer- Class 7</li>
-          <li>Computer- Class 8</li>
-          <li>Computer- Class 9</li>
-          <li>Computer- Class 10</li>
-          <li>Computer- Class 11</li>
-          <li>Computer- Class 12</li>
-          <li>HTML -Frontend </li>
-          <li>CSS- Frontend</li>
-          <li>Javascript-Frontend</li>
-          <li>ReactJs-Frontend</li>
-          <li>Python- Backend</li>
-          <li>Django- Backend</li>
-        </ol>
-      </div>
+    <!-- Second Grid: Work & Resume -->
+    <div class="w3-row">
+        <div class="w3-half w3-purple w3-center" style="min-height:800px" id="work">
+            <div class="w3-left-align w3-padding-large">
+                <h1>Achievements</h1>
+                <p>I have one year experience of teaching basic level in the reputed institution of the country.
+                    I have worked as beginner front end developer using html and css. I am also learning Python and
+                    Django in one
+                    of the reputed institution of capital city of Nepal.
+                </p>
+            </div>
+        </div>
+        <div class="w3-half w3-red w3-container" style="min-height:800px">
+            <div class="w3-padding-64 w3-center">
+                <h2>My Resume</h2>
+                <div class="w3-container w3-responsive">
+                    <table class="w3-table">
+                        <tr class="w3-white">
+                            <th>Year</th>
+                            <th>Qualification</th>
+                            <th>Institution</th>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>2015-2019</td>
+                            <td>BSC. CSIT</td>
+                            <td>Nepalaya College, Kathmandu</td>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>2012-2015</td>
+                            <td>Diploma in Networking</td>
+                            <td>VIT, Melbourne</td>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>2009-2012</td>
+                            <td>Diploma in Horticulture</td>
+                            <td>HSA, Melbourne</td>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>2006-2008</td>
+                            <td>12 in Biological science</td>
+                            <td>CCRC, Kathmandu</td>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>2002-2005</td>
+                            <td>High School</td>
+                            <td>CESBS, Chitwan</td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="w3-half w3-pink w3-container" style="height:700px">
-      <div class="w3-padding-64 w3-padding-large">
-        <h1>Contact</h1>
-        <p class="w3-opacity"></p>
-        <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
-          <div class="w3-section">
-            <label>Name</label>
-            <input class="w3-input" style="width:100%;" type="text" required name="Name">
-          </div>
-          <div class="w3-section">
-            <label>Email</label>
-            <input class="w3-input" style="width:100%;" type="text" required name="Email">
-          </div>
-          <div class="w3-section">
-            <label>Message</label>
-            <input class="w3-input" style="width:100%;" type="text" required name="Message">
-          </div>
-          <button type="submit" class="w3-button w3-teal w3-right">Send</button>
-        </form>
-      </div>
+
+    <!-- Third Grid: Notes -->
+    <div class="w3-row" id="Notes">
+        <div class="w3-half w3-orange w3-container w3-center" style="height:700px">
+            <div>
+                <h1>Notes</h1>
+                <ol>
+                    <li>Computer- Class 3</li>
+                    <li>Computer- Class 4</li>
+                    <li>Computer- Class 5</li>
+                    <li>Computer- Class 6</li>
+                    <li>Computer- Class 7</li>
+                    <li>Computer- Class 8</li>
+                    <li>Computer- Class 9</li>
+                    <li>Computer- Class 10</li>
+                    <li>Computer- Class 11</li>
+                    <li>Computer- Class 12</li>
+                    <li>HTML -Frontend </li>
+                    <li>CSS- Frontend</li>
+                    <li>Javascript-Frontend</li>
+                    <li>ReactJs-Frontend</li>
+                    <li>Python- Backend</li>
+                    <li>Django- Backend</li>
+                </ol>
+            </div>
+        </div>
+        <div class="w3-half w3-pink w3-container" style="height:700px">
+            <div class="w3-padding-64 w3-padding-large">
+                <h1>Contact</h1>
+                <p class="w3-opacity"></p>
+                <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
+                    <div class="w3-section">
+                        <label>Name</label>
+                        <input class="w3-input" style="width:100%;" type="text" required name="Name">
+                    </div>
+                    <div class="w3-section">
+                        <label>Email</label>
+                        <input class="w3-input" style="width:100%;" type="text" required name="Email">
+                    </div>
+                    <div class="w3-section">
+                        <label>Message</label>
+                        <input class="w3-input" style="width:100%;" type="text" required name="Message">
+                    </div>
+                    <button type="submit" class="w3-button w3-teal w3-right">Send</button>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
-  <footer class="footer">
-    <div class="container text-center">
-      <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
-      <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
-      <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa-youtube"></i></a>
-      <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
-    </div>
-  </footer>
+    <footer class="footer">
+        <div class="container text-center">
+            <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa-youtube"></i></a>
+            <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
+        </div>
+    </footer>
 
 </body>
 
