--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <p>I have one year experience of teaching basic level in the reputed institution of the country.
                     I have worked as beginner front end developer using html and css. I am also learning Python and
                     Django in one
-                    of the reputed institution of capital city of Nepal.
+                    of the reputed institution of capital city of Nepal. 
+                    Currently I am working as Python Developer at Flaresight, IT Company. 
                 </p>
             </div>
         </div>
